2003-02-14  Arvind Samptur <arvind.samptur@wipro.com>
	* src/screen.c: (meta_screen_new) : Update the workspace
	names from gconf and set the NET_DESKTOP_NAMES atom.
	Renamed update_workspace_names() to set_workspace_names().
	Fixes #105498

2003-02-04  Havoc Pennington  <hp@redhat.com>

	* NEWS: updated

	* configure.in: 2.4.34

2003-02-04  Havoc Pennington  <hp@redhat.com>

	* src/metacity.schemas.in: default to Simple instead of Atlanta

	* src/themes/Makefile.am (THEMES): add Simple theme

2003-01-30  Havoc Pennington  <hp@redhat.com>

	* src/keybindings.c (process_event): match handlers to key events 
	using key codes, not key syms

2003-02-03  Tõivo Leedjärv  <toivo@linux.ee>

	* configure.in: Added et to ALL_LINGUAS

2003-01-29  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added en_GB nl to ALL_LINGUAS

2003-01-29  Havoc Pennington  <hp@pobox.com>

	* src/menu.c (meta_window_menu_new): don't create workspaces
	menu items if only 1 workspace. Fix for #101952 from 
	Orien Vandenbergh

2003-01-25  Havoc Pennington  <hp@pobox.com>

        (not for 2.2.0)
	
	* src/stack.c (window_is_fullscreen_size): When checking if a
	window is fullscreen size, only require it to be at the origin 
	of the work area, not at the origin of the screen/xinerama.
	Still require it to be full screen in width x height.
	May fix xine in the case where the user has a top panel.

	* src/window.c (constrain_position): restore the ability for
	undecorated windows to position themselves overlapping the top
	panel, but don't let decorated windows do so. Oh the hacks...
	
2003-01-08  Havoc Pennington  <hp@pobox.com>

        (not for 2.2.0)
	
	* src/screen.c (meta_screen_apply_startup_properties): small code
	snippet to fix startup sequences that set legacy class/name

2003-01-22  Havoc Pennington  <hp@redhat.com>

        (not for 2.2.0)
	
	* src/async-getprop.c (async_get_property_handler): do not read 
	sizeof(long) off the X connection. The X protocol does not vary 